Audit fixes — 5-phase security, data integrity, architecture & cleanup (#9)
* feat: Phase 1 security — Spring Security plumbing + identity spoofing fix

pom.xml:
- Add spring-boot-starter-security
- Add spring-security-test (test scope)

SecurityConfig (new):
- @EnableMethodSecurity activates @PreAuthorize on admin controllers
- CSRF disabled (stateless REST API)
- Session policy STATELESS
- CORS delegates to CorsConfigurationSource bean
- URL rules: /api/entities/** + /api/categories/** + /actuator/health = permitAll;
  /api/practice/** = ROLE_USER|ADMIN; /api/admin/** = ROLE_ADMIN; else authenticated
- Injects DevModeAuthFilter before UsernamePasswordAuthenticationFilter when present

DevModeAuthFilter (new, @Profile('!prod')):
- Runs on every profile except prod (dev, test, default)
- Injects fixed principal DEV_PLAYER_ID + [ROLE_USER, ROLE_ADMIN] into SecurityContext
- Idempotent: no-op if authentication already present
- Keyed on DEV_PLAYER_ID constant so tests can reference the same UUID

CorsConfig:
- Switch from CorsFilter bean to CorsConfigurationSource bean (Spring Security 6
  idiomatic; avoids double-filter ordering issues with the security chain)

PracticeGameController:
- Remove @RequestParam UUID playerId from submitAnswer + getGameState
- Add Principal param to all three endpoints; extract playerId via playerIdFrom(principal)
- Eliminates identity spoofing: caller can no longer submit moves as another player

Admin controllers (all 5):
- Add @PreAuthorize('hasRole(ADMIN)') at class level:
  AdminAnswerController, AdminCategoryController, AdminEntityController,
  AdminQuestionController, AdminTemplateController
- Remove stale TODO comments

PracticeGameControllerTest:
- Add class-level @WithMockUser(username = DEV_PLAYER_ID, roles = {USER, ADMIN})
- playerId = UUID.fromString(DevModeAuthFilter.DEV_PLAYER_ID) — matches the
  principal the mock user injects, so service mock stubs resolve correctly
- Remove .param('playerId', ...) from submit + getGameSt